--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1.0"
       data-rh="true"
     />
-    <title>Vite + React</title>
+    <title>Boryspil FM 94.9</title>
   </head>
   <body>
     <div id="root"></div>
